Bug 126767 - Autofill doesn't overwrite data in continuously filled cells
Summary: Autofill doesn't overwrite data in continuously filled cells
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Eike Rathke (retired, only occasionally showing up)
URL:
Whiteboard: target:6.4.0 target:6.3.4
Keywords:
: 126676 127545 127876 (view as bug list)
Depends on:
Blocks: AutoFill
  Show dependency treegraph
 
Reported: 2019-08-08 12:34 UTC by kabilo
Modified: 2020-04-24 18:41 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description kabilo 2019-08-08 12:34:33 UTC
Description:
To autofill a column  the user can double click on the square on the bottom right corner of the cell selection. This should refill the cells down as far the end if all cells are  filled.
(related to Bug 108209 or Bug 126676)

Steps to Reproduce:
1. correct the contents of the top cell in a contiguous column
2. use double-click to re-fill the filled cells under the repaired cell
3. 

Actual Results:
refill does not work

Expected Results:
refill (same as in older versions LO)


Reproducible: Always


User Profile Reset: No



Additional Info:
Comment 1 Buovjaga 2019-08-09 10:57:24 UTC
Hmm, it is true this should work for contiguous data. Excel behaves as requested. Setting to NEW
Comment 2 Eike Rathke (retired, only occasionally showing up) 2019-08-09 15:22:49 UTC
*** Bug 126676 has been marked as a duplicate of this bug. ***
Comment 3 Eike Rathke (retired, only occasionally showing up) 2019-08-09 15:55:17 UTC
What does Excel do for these constellations when double clicking the fill handle on B1 (b)?

 A  B
 a  b
 x  y
 x  y
 x


 A  B
 a  b
 x  y
 x  y
    y

Also, for the same two constellations selecting A1:B1 and double clicking B1 (b)?


And here when selecting A1:C1 and double clicking handle on C1 (c)?

 A  B  C
 a     c
 x  y  z
 x  y  z
 x  y


 A  B  C
 a  b  c
 x     z
 x  y  z
 x  y  z
 x  y
Comment 4 Buovjaga 2019-08-09 17:28:14 UTC
(In reply to Eike Rathke from comment #3)
> What does Excel do for these constellations when double clicking the fill
> handle on B1 (b)?
> 
>  A  B
>  a  b
>  x  y
>  x  y
>  x

b
b
b
 
>  A  B
>  a  b
>  x  y
>  x  y
>     y


b
b
b
b

> Also, for the same two constellations selecting A1:B1 and double clicking B1
> (b)?

First one:
a  b
a  b
a  b
x

Second one:
a  b
a  b
a  b
   y

> 
> 
> And here when selecting A1:C1 and double clicking handle on C1 (c)?
> 
>  A  B  C
>  a     c
>  x  y  z
>  x  y  z
>  x  y

a     c
a     c
a     c
x  y
 
>  A  B  C
>  a  b  c
>  x     z
>  x  y  z
>  x  y  z
>  x  y

a  b  c
a  b  c
a  b  c
a  b  c
x  y

Tested with MSO 365 on Win 10.
Comment 5 Buovjaga 2019-08-09 17:29:38 UTC
My first test (at the time of comment 1) was with a single column with no neighbouring columns - LibreOffice refused to fill.
Comment 6 Eike Rathke (retired, only occasionally showing up) 2019-08-09 18:03:10 UTC
Thanks. These samples are meant to identify the behaviour if and how neighbouring columns affect the fill of filled columns. Seems they don't, and furthermore for a range/row selection up to the minimum row of filled columns is filled. That at least gives some orientation.

One more dumb question ;-)
What happens for a selection of A1:B1 (empty cells)

 A  B

 x  y
 x  y
Comment 7 Buovjaga 2019-08-09 18:07:37 UTC
(In reply to Eike Rathke from comment #6)
> One more dumb question ;-)
> What happens for a selection of A1:B1 (empty cells)
> 
>  A  B
> 
>  x  y
>  x  y

Nothing happens.
Comment 8 kabilo 2019-08-09 21:42:17 UTC Comment hidden (off-topic)
Comment 9 Buovjaga 2019-08-10 07:25:22 UTC Comment hidden (off-topic)
Comment 10 Eike Rathke (retired, only occasionally showing up) 2019-08-14 15:55:11 UTC Comment hidden (off-topic)
Comment 11 p199999991 2019-08-30 16:14:04 UTC Comment hidden (obsolete)
Comment 12 p199999991 2019-08-30 16:19:48 UTC
(In reply to p199999991 from comment #11)
> The old Excel's behaviour (I'm not sure what they did to enhance it in 2013
> and later) is:
> In each column, beginning with just below the selection, we count the number
> of cells until it changes from empty to non-empty or vice versa (0 if not
> found*).
> Let x be the minimum of the above list of numbers.
> Let y = x if x>0, otherwise y = max of the number of consecutive non-empty
> cells for the adjacent columns.
> Fill down y more rows below the selection.

I forgot to mention that we can make it even better by ignoring the 0's in the list.
Comment 13 Eike Rathke (retired, only occasionally showing up) 2019-09-30 11:12:24 UTC
*** Bug 127876 has been marked as a duplicate of this bug. ***
Comment 14 seblo 2019-10-04 12:23:16 UTC Comment hidden (me-too)
Comment 15 Andy 2019-10-04 13:19:20 UTC
Yes, that is really the more troubling point, a significant regression for usability and efficiency. Any effort to revert to the previous behavior would be heaven sent!
Comment 16 Eike Rathke (retired, only occasionally showing up) 2019-10-16 22:40:34 UTC
One more please:

 A  B  C
---------
 a  b  c
 x     z
 x  y  z
 x  y  z
 x     z

Select A1:C1 and click handle on C1 (c)
Comment 17 kabilo 2019-10-17 04:44:41 UTC
Nothing happens (Excel 2013)
Comment 18 Eike Rathke (retired, only occasionally showing up) 2019-10-17 11:37:23 UTC
Compared with ...

(In reply to Buovjaga from comment #4)
>  
> >  A  B  C
> >  a  b  c
> >  x     z
> >  x  y  z
> >  x  y  z
> >  x  y
> 
> a  b  c
> a  b  c
> a  b  c
> a  b  c
> x  y
> 
> Tested with MSO 365 on Win 10.

... that nothing happens for this case doesn't make sense to me. I'd expect either

 A  B  C
---------
 a  b  c
 a  b  c
 a  b  c
 a  b  c
 x     z

(likely), or even

 A  B  C
---------
 a  b  c
 a  b  c
 a  b  c
 a  b  c
 x  b  z

(probably not because data in column B ends earlier).

Can someone test with Excel 365 please?
Comment 19 Eike Rathke (retired, only occasionally showing up) 2019-10-17 11:39:05 UTC
Sorry, second (less likely) one should had been

 A  B  C
---------
 a  b  c
 a  b  c
 a  b  c
 a  b  c
 a  b  c
Comment 20 kabilo 2019-10-17 12:11:21 UTC
 A  B  C
---------
 a  b  c
 a  b  c
 a  b  c
 a  b  c
 x     z

updates the first four lines = nothing happens for fifth line (tested in Excel 2013 and Excel 2016). Office 365 not available for me.
Comment 21 Eike Rathke (retired, only occasionally showing up) 2019-10-17 12:47:45 UTC
Thanks, but.. that's not what I asked though. That was one of the possible results after AutoFill of

 A  B  C
---------
 a  b  c
 x     z
 x  y  z
 x  y  z
 x     z

from comment 16.
Comment 22 kabilo 2019-10-17 13:10:01 UTC
(In reply to Eike Rathke from comment #16)
> One more please:
> 
>  A  B  C
> ---------
>  a  b  c
>  x     z
>  x  y  z
>  x  y  z
>  x     z
> 
> Select A1:C1 and click handle on C1 (c)

nothing happens (Comment 17) - tested in Excel 2013 and Excel 2016. It looks like the first empty any cell in the indicated columns ends the autofill.
Comment 23 Eike Rathke (retired, only occasionally showing up) 2019-10-17 14:42:28 UTC
That first empty cell can't be the criteria, given my comment 18 with the result from comment 4 that

 A  B  C
 a  b  c
 x     z
 x  y  z
 x  y  z
 x  y

for A1:C1 results in

a  b  c
a  b  c
a  b  c
a  b  c
x  y
Comment 24 kabilo 2019-10-17 15:07:31 UTC
you need to ask buovjaga to confirm the result from Office 365 from Comment 4 . I confirm the desktop versions (Excel 2013 and 2016) in this case do nothing.
Comment 25 kabilo 2019-10-17 15:14:24 UTC
all other results are identical. Thanks
Comment 26 mirko.pieropan 2019-10-17 19:35:11 UTC
Hi, with Office 365:

> A  B  C
> ---------
>  a  b  c
>  x     z
>  x  y  z
>  x  y  z
>  x     z

if I select A1:C1 and double click on the handle at the bottom right of C1 nothing happens. 
However, if I select the same cells and drag the handle down to C5 I get:
a	b	c
a	b	c
a	b	c
a	b	c
a	b	c

> What does Excel do for these constellations when double clicking the fill
> handle on B1 (b)?
> 
>  A  B
>  a  b
>  x  y
>  x  y
>  x

Here I get:
a	b
x	b
x	b
x	

>  A  B
>  a  b
>  x  y
>  x  y
>     y

And here: 
a	b
x	b
x	b
	b

> And here when selecting A1:C1 and double clicking handle on C1 (c)?
> 
>  A  B  C
>  a     c
>  x  y  z
>  x  y  z
>  x  y

a		c
a		c
a		c
x	y	

>  A  B  C
>  a  b  c
>  x     z
>  x  y  z
>  x  y  z
>  x  y

Nothing happens:
a	b	c
x		z
x	y	z
x	y	z
x	y	

Tested on Microsoft Excel for Mac. Version 16.30. Office 365.
Comment 27 kabilo 2019-10-18 04:39:24 UTC
(In reply to mirko.pieropan from comment #26)
> Hi, with Office 365:
> 
> > A  B  C
> > ---------
> >  a  b  c
> >  x     z
> >  x  y  z
> >  x  y  z
> >  x     z
> 
> if I select A1:C1 and double click on the handle at the bottom right of C1
> nothing happens. 
> However, if I select the same cells and drag the handle down to C5 I get:
> a	b	c
> a	b	c
> a	b	c
> a	b	c
> a	b	c

hi, yes the results all the tests may be different when dragging (it isn't autofill). The cells are filled with the value of the selection, that is the standard. Autofill worked the same way until version 6.2.6. I would like to add this original autofill eg Alt+doubleclick and Ctrl+Alt+doubleclick (it's another version of autofill).
Comment 28 Eike Rathke (retired, only occasionally showing up) 2019-10-18 10:05:16 UTC
@Mirko: thanks for trying!
So I think we can indeed recap that any blank cell immediately below the selection disables the overwriting fill. Makes sense.
Comment 29 Commit Notification 2019-10-18 14:53:02 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/667287228143519f4a91109924787ad169676ab8

Resolves: tdf#126767 Overwriting autofill if data immediately below selection

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 30 Eike Rathke (retired, only occasionally showing up) 2019-10-18 14:53:43 UTC
Pending review https://gerrit.libreoffice.org/81055 for 6-3
Comment 31 Commit Notification 2019-10-23 09:10:15 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "libreoffice-6-3":

https://git.libreoffice.org/core/commit/09fb258853448b89d40a950df639d9a0fe06ebf5

Resolves: tdf#126767 Overwriting autofill if data immediately below selection

It will be available in 6.3.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 32 kabilo 2019-10-23 11:39:11 UTC
thanks
Comment 33 Buovjaga 2020-04-24 18:41:40 UTC
*** Bug 127545 has been marked as a duplicate of this bug. ***