Resolves: tdf#126767 Overwriting autofill if data immediately below selection

Change-Id: Ibb11e7a8e1dc3d9d23a64073bde6250223220e3f
Reviewed-on: https://gerrit.libreoffice.org/81045
Reviewed-by: Eike Rathke <erack@redhat.com>
Tested-by: Jenkins